--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -67,6 +67,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -239,6 +240,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.73.190.209;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.87.136;
@@ -1123,6 +1125,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
